Fixed bugg occuring when the thumbnails for searched items were wrapped in a JSON instead of an array.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -138,6 +138,9 @@ Home page
 .search-list-item-img-container{
   width: 12%;
 }
+.search-list-item-img-container img{
+max-width: 70%;
+}
 .search-list-item{
   display: flex;
   width: auto;
